# chat-model

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml
app/: main.py
app/core/: config.py  redis.py
app/core/settings/: base.py  development.py  production.py
app/database/: redis.py
app/routers/v1/: __init__.py
app/routers/v1/task/: route_question.py  route_upload.py
app/utils/: constants.py  extract_pdf.py  llm.py  llm_completion.py  models.py  utils.py
